--- a/onlineshop.html
+++ b/onlineshop.html
@@ -60,6 +60,7 @@ border-radius: 3px;
   <a href="C:\Users\AISHWARYA\Downloads\home and kitchen.html">Home & Kitchen</a>
   <a href="C:\Users\AISHWARYA\Pictures\books.html">Books</a>
   <a href="#Toys & Games">Toys & Games</a>
+  <a href="file:///C:/Users/Niharika%20Dixit/Desktop/Laptop%20images/games%20and%20toys.html">Toys & Games</a>
   <a href="#amazon Pay">amazon Pay</a>
   <a href="#Prime">Prime</a>
   <a class="active" href="register.html"> Register</a>
